--- a/src/app/merchandise/delivery/config-shipment/config-shipment.component.html
+++ b/src/app/merchandise/delivery/config-shipment/config-shipment.component.html
@@ -15,11 +15,11 @@
   </div>
 
   <div mat-dialog-content>
-    <form [formGroup]="shipmentForm" class="shipment-form">
+    <form [formGroup]="shipmentForm" class="shipment-form" *ngIf="shipmentForm">
 
       <div class="control">
         <div class="label">Đơn vị vận chuyển: <span class="required"> * </span></div>
-        <p-dropdown [style]="{'width':'100%'}" [options]="lsTransporter" formControlName="TransporterId"></p-dropdown>
+        <p-dropdown optionLabel="label" formControlName="TransporterId" [style]="{'width':'100%'}" [options]="transporters" ></p-dropdown>
       </div>
       <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.TransporterId?.errors?.required
          && shipmentForm.controls.TransporterId?.touched">
